--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+@font-face {
+    font-family: jost;
+    src: url("fonts/Jost-VariableFont_ital\,wght.ttf");
+}
+
+body {
+    font-family: 'jost', sans-serif;
+    text-align: justify;
+}
 
 .conteiner_logo {
     padding: 1%;
@@ -25,22 +34,7 @@
 .carrito {
     width: 3rem;
 }
- /*redes sociales*/
- .redesSociales {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-    position: fixed;
-    top: 200px;
-   
-    list-style: none;
-}
-.boton_redes {
-    margin: 2px;
-    width: 40px;
-    height: 40px;
-}
+ 
 
 .principal {
     display: flex;
@@ -161,7 +155,10 @@
 
 }
 .nosotros{
-    padding: 3%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: normal;
+   
+    padding: 1%;
     display: flex;
    
     justify-content: center;
@@ -171,9 +168,38 @@
 }
 .nosotros > p  {
     text-align  : center;
-    font-size: 3rem;
+    font-size: 1.5rem;
+}
+.recetas{
+    display: flex;
+
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: bold;
+    height: 150px;
+    background-image: url("images/banner_recetas.jpg");
+    background-repeat:no-repeat;
+    
 }
 
-footer { 
-    text-align  : center;
+footer , footer > div { 
+    display: flex;
+    justify-content: space-between;
+
+    
+    
+}
+.div_copyright {
+    position: relative;
+    left: 37%;
+
+}
+.div_redes{
+    position: relative;
+    right: 5%;
+}
+.boton_redes {
+    margin: 2px;
+    width: 40px;
+    height: 40px;
 }
