--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
     width: 100%;
     height: 400px;
     position: relative;
-
+    margin: 0.5;
 }
 
 .item {
@@ -168,27 +168,35 @@ body {
 }
 .nosotros > p  {
     text-align  : center;
+    width: 70%;
     font-size: 1.5rem;
 }
-.recetas{
+.recetas_titulo{
     display: flex;
-
+    align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: bold;
-    height: 150px;
+    height: 257px;
+    width: 100%;
     background-image: url("images/banner_recetas.jpg");
-    background-repeat:no-repeat;
+    opacity: 0.6;
+    
+    
     
 }
 
 footer , footer > div { 
     display: flex;
     justify-content: space-between;
-
-    
-    
+    align-items: center;
 }
+.recetas_foto{
+    margin: 3%;
+    display: flex;
+    justify-content:space-around;
+}
+
 .div_copyright {
     position: relative;
     left: 37%;
