--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,9 @@ body {
     width: 70%;
     font-size: 1.5rem;
 }
+.verde{
+    color:rgba(31, 121, 9, 0.897);
+}
 .recetas_titulo{
     display: flex;
     align-items: center;
@@ -195,7 +198,13 @@ footer , footer > div {
     margin: 3%;
     display: flex;
     justify-content:space-around;
+    
 }
+.recetas_foto > div > p {
+    text-align: center;
+}
+.recetas_imagen:hover  {-webkit-transform:scale(1.3);transform:scale(1.3);}
+
 
 .div_copyright {
     position: relative;
