--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-@font-face {
-    font-family: jost;
-    src: url("fonts/Jost-VariableFont_ital\,wght.ttf");
-}
+
 
 body {
     font-family: 'jost', sans-serif;
@@ -34,7 +31,6 @@ body {
 .carrito {
     width: 3rem;
 }
- 
 
 .principal {
     display: flex;
@@ -129,52 +125,53 @@ body {
     justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.entrega > div {
+
+.entrega>div {
     display: flex;
     flex-direction: column;
     padding-top: 0.5%;
     text-align: center;
     width: 30%;
- 
 }
-.entrega > div > img {
+
+.entrega>div>img {
     position: absolute;
-    
     width: 50px;
 }
-.envios_camion{
+
+.envios_camion {
     left: 8%;
-
 }
-.envios_tarjeta{
+
+.envios_tarjeta {
     left: 35%;
-
 }
-.envios_candado{
+
+.envios_candado {
     left: 66%;
-
 }
-.nosotros{
+
+.nosotros {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
-   
     padding: 1%;
     display: flex;
-   
     justify-content: center;
     flex-direction: column;
-   
     align-items: center;
 }
-.nosotros > p  {
-    text-align  : center;
+
+.nosotros>p {
+    text-align: center;
     width: 70%;
     font-size: 1.5rem;
 }
-.verde{
-    color:rgba(31, 121, 9, 0.897);
+
+.verde {
+    color: rgba(31, 121, 9, 0.897);
 }
-.recetas_titulo{
+
+.recetas_titulo {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -184,37 +181,64 @@ body {
     width: 100%;
     background-image: url("images/banner_recetas.jpg");
     opacity: 0.6;
-    
-    
-    
 }
 
-footer , footer > div { 
+.contacto {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+  
+}
+
+.contacto>p {
+    font-size: 4rem;
+    font-weight: bold;
+    opacity: 0.6;
+}
+
+.contacto>form {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
+footer, footer>div {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.recetas_foto{
+
+.recetas_foto {
     margin: 3%;
     display: flex;
-    justify-content:space-around;
-    
+    justify-content: space-around;
 }
-.recetas_foto > div > p {
+
+.recetas_foto>div>p {
     text-align: center;
 }
-.recetas_imagen:hover  {-webkit-transform:scale(1.3);transform:scale(1.3);}
 
+.recetas_imagen:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+}
 
 .div_copyright {
     position: relative;
     left: 37%;
-
 }
-.div_redes{
+
+.div_redes {
     position: relative;
     right: 5%;
 }
+
 .boton_redes {
     margin: 2px;
     width: 40px;
