--- a/css/style.css
+++ b/css/style.css
@@ -111,14 +111,7 @@ body {
     animation-duration: .5s;
 }
 
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
+
 
 .entrega {
     display: flex;
@@ -166,9 +159,15 @@ body {
     width: 70%;
     font-size: 1.5rem;
 }
+.titulo {
+    text-shadow: 1px 1px 5px rgba(128, 128, 128, 0.507);
+   
+}
 
 .verde {
     color: rgba(31, 121, 9, 0.897);
+    letter-spacing: 0.1em;
+  
 }
 
 .recetas_titulo {
@@ -181,37 +180,6 @@ body {
     width: 100%;
     background-image: url("images/banner_recetas.jpg");
     opacity: 0.6;
-}
-
-.contacto {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-  
-}
-
-.contacto>p {
-    font-size: 4rem;
-    font-weight: bold;
-    opacity: 0.6;
-}
-
-.contacto>form {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    flex-direction: column;
-    justify-content: space-around;
-    border-radius: 30px;
-    padding: 10px;
-    text-align: center;
-}
-
-footer, footer>div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .recetas_foto {
@@ -228,6 +196,42 @@ footer, footer>div {
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
+
+.contacto {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+}
+
+.contacto>p {
+    text-align: center;
+    width: 100%;
+    font-size: 4rem;
+    font-weight: bold;
+    opacity: 0.6;
+}
+
+.contacto>form {
+    position: relative;
+    left: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 20px;
+    border-radius: 30px;
+    width: 40%;
+    justify-content: space-around;
+    border-radius: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
+footer, footer>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 .div_copyright {
     position: relative;
