--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family: 'jost', sans-serif;
     text-align: justify;
@@ -111,8 +110,6 @@ body {
     animation-duration: .5s;
 }
 
-
-
 .entrega {
     display: flex;
     justify-content: center;
@@ -159,15 +156,14 @@ body {
     width: 70%;
     font-size: 1.5rem;
 }
+
 .titulo {
     text-shadow: 1px 1px 5px rgba(128, 128, 128, 0.507);
-   
 }
 
 .verde {
     color: rgba(31, 121, 9, 0.897);
     letter-spacing: 0.1em;
-  
 }
 
 .recetas_titulo {
@@ -183,47 +179,195 @@ body {
 }
 
 .recetas_foto {
-    margin: 3%;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+    padding: 2%;
     display: flex;
     justify-content: space-around;
+    background-color: rgb(248, 248, 248);
+}
+.recetaOculto {
+    visibility: hidden;
+}
+
+.receta_foto {
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(248, 248, 248);
+}
+
+.receta_foto:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.05);
+    background-color: rgba(255, 255, 255, 0.87);
+    border-radius: 10%;
+    font-size: 1.5em;
+    text-shadow: 1px 1px 5px rgba(99, 91, 91, 0.507);
+    transition: 0.5s;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+}
+
+.overlay.active {
+    visibility: visible;
+}
+
+.popup {
+    background-color: #f8f8f8;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 13px;
+    font-family: 'Monserrat', sans-serif;
+    padding: 20px;
+    text-align: center;
+    width: 600px;
+    transition: .3s ease all;
+    transform: scale(0.7);
+    opacity: 0;
+}
+
+.popup .btn-cerrar-popup {
+    font-size: 16px;
+    line-height: 16px;
+    display: block;
+    text-align: right;
+    color: #BBBBBB;
+    transition: .3s ease all;
+}
+
+.popup .btn-cerrar-popup:hover {
+    color: #000;
+}
+
+.popup h3 {
+    font-size: 36px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    opacity: 0;
+}
+
+.popup .ingredientes {
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    opacity: 0;
+}
+
+/* ANIMACIONES */
+
+.popup.active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.popup.active h3 {
+    animation: entradatitulo .8s ease .5s forwards;
+}
+
+.popup.active .ingredientes {
+    animation: lista .8s ease .5s forwards;
+}
+
+.popup.active .recetas_imagen_popup {
+    animation: imagen 1s ease 1s forwards;
+}
+
+@keyframes entradatitulo {
+    from {
+        transform: translateY(-25px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes lista {
+    from {
+        transform: translateY(25px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes imagen {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .recetas_foto>div>p {
     text-align: center;
 }
 
-.recetas_imagen:hover {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+.receta_foto>img {
+    width: 220px;
+    height: 220px;
+}
+
+.recetas_imagen_popup {
+    width: 220px;
+    height: 220px;
+    opacity: 0;
+}
+
+.verReceta {
+    color: grey;
+    text-decoration: none;
 }
 
 .contacto {
+    position: relative;
+    left: 30%;
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
+    background-color: rgba(39, 4, 4, 0.116);
+    height: 40%;
+    width: 40%;
+    border-radius: 30px;
 }
 
 .contacto>p {
     text-align: center;
     width: 100%;
-    font-size: 4rem;
+    font-size: 1.9rem;
     font-weight: bold;
     opacity: 0.6;
 }
 
 .contacto>form {
-    position: relative;
-    left: 30%;
     display: flex;
     flex-direction: column;
     padding: 5px 20px;
     border-radius: 30px;
-    width: 40%;
-    justify-content: space-around;
-    border-radius: 30px;
-    padding: 10px;
+    width: 100%;
     text-align: center;
+}
+
+.contacto>form>input, .contacto>form>button, .contacto>form>textarea {
+    margin: 5px;
+    border-radius: 0.625rem;
+    height: 1.875rem;
 }
 
 footer, footer>div {
@@ -232,7 +376,6 @@ footer, footer>div {
     align-items: center;
 }
 
-
 .div_copyright {
     position: relative;
     left: 37%;
@@ -240,7 +383,7 @@ footer, footer>div {
 
 .div_redes {
     position: relative;
-    right: 5%;
+    right: 2%;
 }
 
 .boton_redes {
