--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     justify-content: center;
 }
 
-.buscar {
+.buscar{
     display: flex;
     flex-direction: row;
     width: 20%;
@@ -75,7 +75,7 @@ body {
     height: 200px;
     display: flex;
     position: relative;
-    margin: 0.5;
+    margin: 1.5;
 }
 
 .item {
@@ -137,7 +137,9 @@ body {
 
 .entrega {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -146,12 +148,12 @@ body {
     flex-direction: column;
     padding-top: 0.5%;
     text-align: center;
-    width: 30%;
+    width: 50%;
 }
 
 .entrega>div>img {
     position: absolute;
-    width: 3%;
+    width: 3%;  
 }
 
 .entrega p {
@@ -159,15 +161,15 @@ body {
 }
 
 .envios_camion {
-    left: 5%;
+    left: 20%;
 }
 
 .envios_tarjeta {
-    left: 35%;
+    left: 20%;
 }
 
 .envios_candado {
-    left: 63%;
+    left: 20%;
 }
 
 /* NOSOTROS */
@@ -191,9 +193,10 @@ body {
 /* RECETAS */
 
 .verde {
-    color: rgba(31, 121, 9, 0.945);
+    color: rgb(31, 121, 9, 0.945);
     letter-spacing: 0.1em;
     text-align: center;
+    font-size: 2em;
     width: 100%;
 }
 
@@ -201,7 +204,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 4rem;
+    
     font-weight: bold;
     height: 257px;
     width: 100%;
@@ -214,6 +217,8 @@ body {
     margin-bottom: 1.5%;
     padding: 2%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
     background-color: rgb(248, 248, 248);
 }
@@ -225,37 +230,31 @@ body {
     width: 30%;
     background-color: rgb(248, 248, 248);
     align-items: center;
+    transition: 0.5;
 }
 
 .receta_foto:hover {
     -webkit-transform: scale(1.3);
     transform: scale(1.05);
-    background-color: rgba(255, 255, 255, 0.87);
+    background-color: lightgrey;
     border-radius: 10%;
     font-size: 1.5em;
     text-shadow: 1px 1px 5px rgba(99, 91, 91, 0.507);
     transition: 0.5s;
 }
 
-.recetaOculto {
-    visibility: hidden;
-}
-
 .recetas_foto>div>p {
     text-align: center;
 }
-
 .receta_foto>img {
     width: 100%;
     height: 100px;
 }
-
 .recetas_imagen_popup {
     width: 220px;
     height: 220px;
     opacity: 0;
 }
-
 .verReceta {
     color: grey;
     text-decoration: none;
@@ -278,7 +277,6 @@ body {
     border-radius: 30px;
     transition: 0.5s;
 }
-
 .overlay {
     background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
@@ -286,18 +284,19 @@ body {
     bottom: 0;
     right: 0;
     left: 0;
-    display: flex;
+   
     align-items: center;
     justify-content: center;
-    visibility: hidden;
+    display: none;
 }
 
 .popup.active, .overlay.active {
-    visibility: visible;
+    display: flex;
+    transition: .3s ease all;
 }
 
 .popup {
-    display: flex;
+    
     flex-direction: column;
     background-color: #f8f8f8;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
@@ -306,10 +305,10 @@ body {
     padding: 20px;
     text-align: center;
     width: 600px;
-    transition: .3s ease all;
+   
     transform: scale(0.7);
     opacity: 1;
-    visibility: hidden;
+    display: none;
 }
 
 .popup .btn-cerrar-popup {
@@ -414,7 +413,7 @@ body {
     left: 30%;
     display: flex;
     flex-direction: column;
-    width: 100%;
+   
     justify-content: center;
     background-color: rgba(39, 4, 4, 0.116);
     height: 40%;
@@ -423,11 +422,8 @@ body {
 }
 
 .contacto>p {
-    text-align: center;
-    width: 100%;
-    font-size: 1.9rem;
-    font-weight: bold;
-    opacity: 0.6;
+   
+    display: none;
 }
 
 .contacto>form {
@@ -472,6 +468,10 @@ footer, footer>div {
     .fotos_carrusel {
         height: 400px;
     }
+    .entrega {
+      
+        flex-direction: row;
+    }
     .item {
         width: 100%;
         height: 400px;
@@ -504,9 +504,35 @@ footer, footer>div {
         background: none;
         box-shadow: none;
     }
+    .verde {
+        font-size: 4em;
+    }
+    .recetas_foto {
+      
+        flex-direction: row;
+    }
     .receta_foto>img {
+        width: 80%;
+        height: 200px;
+    }
+    .contacto>p {
+        text-align: center;
         width: 100%;
-        height: 220px;
+        font-weight: bold;
+        font-size: 2em;
+        opacity: 0.6;
+        display:inline;
+    }
+    .envios_camion {
+        left: 5%;
+    }
+    
+    .envios_tarjeta {
+        left: 35%;
+    }
+    
+    .envios_candado {
+        left: 63%;
     }
     footer, footer>div {
         display: flex;
